[package]
name = "vortex"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.72"
serde = { version = "1.0.183", features = ["derive"] }
serde_json = "1.0.104"

[[bin]]
name = "echo"
path = "src/bin/echo.rs"
