[package]
name = "vortex"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.72"
serde = { version = "1.0.183", features = ["derive"] }
serde_json = "1.0.104"
ulid = { version = "1.0.0", features = ["serde"] }

[[bin]]
name = "echo"
path = "src/bin/echo.rs"

[[bin]]
name = "unique_id"
path = "src/bin/unique_id.rs"

[[bin]]
name = "broadcast"
path = "src/bin/broadcast.rs"
